fix vertical alignment of topbar logo

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -268,7 +268,8 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 .nav #logo { display:flex; align-items:center;}
 
 .nav #logo a { display: inline-block; margin-right:20px; }
-.nav #logo a:first-child span { font-size:24px; font-weight:500;}
+.nav #logo a:last-child span,
+.nav #logo a:first-child span { font-size:24px; line-height:26px; font-weight:500;}
 
 .nav a { text-decoration: none; font-size:0; display:inline-block; }
 
